--- a/gate-way/src/main/resources/templates/login.html
+++ b/gate-way/src/main/resources/templates/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
- <head>
-     <meta charset="UTF-8"/>
-     <title>Title</title>
+     <head>
+         <meta charset="UTF-8"/>
+         <title>Title</title>
      </head>
  <body>
 
-    <a href="https://github.com/login/oauth/authorize?client_id=c9d8fccc9202c219481c&state=test&redirect_uri=http://localhost:8001/api/github/callback;">GitHub登录</a>
-    <a href="">QQ登录</a>
+    <a  href="/api/github/login">GitHub登录</a>
+    <a  href="/api/qq/login">QQ登录</a>
     <div style="width: 100%;height: 600px;">
     </div>
  </body>
